syntax = "proto3";

option csharp_namespace = "gRPC.Server_v4";

package fileUpload;


service FileTransfer {
	rpc Upload (stream FileUploadRequest) returns(stream FileUploadReply);
}

message FileUploadRequest{
	bytes fileContent = 1;
	int32 fileSize = 2;
	string filePath = 3;
}

message FileUploadReply{
	bytes fileContent = 1;
	int32 fileSize = 2;
	string filePath = 3;
}

